changed id as a foreign key to email
