# app/controllers/time_messages_controller.rb
@@ -1,31 +1,22 @@
+# app/controllers/time_messages_controller.rb
 class TimeMessagesController < ApplicationController
   skip_before_action :verify_authenticity_token
   before_action :set_user
   before_action :set_time_message, only: %i[ show edit update destroy ]
 
-  # GET /time_messages or /time_messages.json
+  # GET /users/:email/time_messages
   def index
-    Rails.logger.info "Params received: #{params.inspect}"
     @time_messages = @user.time_messages.where("date_to_open <= ?", Date.today)
     render json: @time_messages
   end
 
-  # GET /time_messages/1 or /time_messages/1.json
+  # GET /users/:email/time_messages/:id
   def show
     @time_message = TimeMessage.find(params[:id])
     render json: @time_message
   end
 
-  # GET /time_messages/new
-  def new
-    @time_message = TimeMessage.new
-  end
-
-  # GET /time_messages/1/edit
-  def edit
-  end
-
-  # POST /time_messages or /time_messages.json
+  # POST /users/:email/time_messages
   def create
     @time_message = TimeMessage.new(time_message_params)
     @time_message.date_to_open = Date.parse(time_message_params[:date_to_open])
@@ -37,7 +28,7 @@ class TimeMessagesController < ApplicationController
     end
   end
 
-  # PATCH/PUT /time_messages/1 or /time_messages/1.json
+  # PUT /users/:email/time_messages/:id
   def update
     if @time_message.update(time_message_params)
       render json: @time_message, status: :ok
@@ -46,24 +37,26 @@ class TimeMessagesController < ApplicationController
     end
   end
 
-  # DELETE /time_messages/1 or /time_messages/1.json
+  # DELETE /users/:email/time_messages/:id
   def destroy
     @time_message.destroy!
     render json: @time_message
   end
 
   private
-    def set_user
-      @user = User.find(params[:user_id])
+  def set_user
+    Rails.logger.info "Params received: #{params.inspect}"
+    @user = User.find_by(email: params[:user_email])
+    unless @user
+      render json: { error: "User not found" }, status: :not_found
     end
+  end
 
-    # Use callbacks to share common setup or constraints between actions.
-    def set_time_message
-      @time_message = @user.time_messages.find(params[:id])
-    end
+  def set_time_message
+    @time_message = @user.time_messages.find(params[:id])
+  end
 
-    # Only allow a list of trusted parameters through.
-    def time_message_params
-      params.require(:time_message).permit(:content, :date_to_open).merge(user_id: params[:user_id])
-    end
+  def time_message_params
+    params.require(:time_message).permit(:content, :date_to_open).merge(user_email: params[:user_email])
+  end  
 end
