# db/schema.rb
@@ -10,17 +10,16 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2024_07_02_015830) do
+ActiveRecord::Schema[7.1].define(version: 2024_07_07_203659) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
   create_table "time_messages", force: :cascade do |t|
     t.string "content"
     t.datetime "date_to_open"
-    t.bigint "user_id", null: false
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
-    t.index ["user_id"], name: "index_time_messages_on_user_id"
+    t.string "user_email"
   end
 
   create_table "users", force: :cascade do |t|
@@ -29,5 +28,4 @@ ActiveRecord::Schema[7.1].define(version: 2024_07_02_015830) do
     t.datetime "updated_at", null: false
   end
 
-  add_foreign_key "time_messages", "users"
 end
